Added MapSelectController and allowed for custom maps to be loaded.